--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ html {
   font-family: "Fira Code", monospace;
 }
 
+:root {
+  --main-color: #0f1626;
+  --sub-color: #f5f5f5;
+  --back-color: #ab987a;
+  --contrast-color: #ff533d;
+}
+
 /*--NAV--*/
 
 .nav {
@@ -17,7 +24,7 @@ html {
   top: 0;
   width: 100%;
   height: 70px;
-  background-color: slateblue;
+  background-color: var(--back-color);
   display: flex;
   justify-content: flex-end;
   box-shadow: 0 2px 6px 1px #000;
@@ -35,14 +42,15 @@ html {
 
 .link-section {
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: 1.7em;
+  font-weight: 500;
   text-transform: uppercase;
-  color: #333;
+  color: var(--sub-color);
   transition: all 0.22s;
 }
 
 .link-section:hover {
-  color: #eee;
+  color: var(--main-color);
   outline: none;
 }
 
@@ -51,8 +59,8 @@ html {
 .welcome {
   width: 100%;
   height: 100vh;
-  background-color: darkolivegreen;
-  background-image: linear-gradient(270deg, #3d563d 0%, #143714 100%);
+  background-color: var(--main-color);
+  background-image: linear-gradient(270deg, #0f1609 0%, #0f2645 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,7 +70,7 @@ html {
 
 .welcome h1,
 .welcome h2 {
-  color: #fff;
+  color: var(--sub-color);
   text-shadow: 1px 1px 5px #000;
 }
 
@@ -78,15 +86,15 @@ h2 {
 /*---PROJECTS---*/
 
 .projects-section {
-  background-color: cadetblue;
+  background-color: var(--sub-color);
   padding: 10rem 2rem;
 }
 
 .projects-header {
   font-size: 2.5em;
   margin: 0 auto 6rem auto;
-  color: #fff;
-  border-bottom: 2px solid #fff;
+  color: var(--main-color);
+  border-bottom: 2px solid var(--contrast-color);
 }
 
 .projects-grid {
@@ -108,7 +116,7 @@ h2 {
 }
 
 .project-tile {
-  background-color: #333;
+  background-color: var(--main-color);
   display: flex;
   flex-direction: column;
 }
@@ -119,16 +127,16 @@ h2 {
 
 .project-title {
   margin: 1em auto;
-  color: #fff;
+  color: var(--sub-color);
   font-size: 1.1em;
   font-weight: bold;
 }
 
 .code {
-  color: #333;
+  color: var(--main-color);
   transition: 0.2s;
 }
 
 .project-tile:hover .project-title .code {
-  color: #ff7f50;
+  color: var(--contrast-color);
 }
