--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,42 @@ html {
   font-family: "Fira Code", monospace;
 }
 
+html {
+  font-size: 52.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 1.8rem;
+  line-height: 1.4;
+}
+
 :root {
   --main-color: #0f1626;
   --sub-color: #f5f5f5;
   --back-color: #ab987a;
   --contrast-color: #ff533d;
+}
+
+/* 1200px / 16px = 75em */
+@media (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* 980px / 16px = 61.25em */
+@media (max-width: 61.25em) {
+  html {
+    font-size: 48%;
+  }
+}
+
+/* 460px / 16px = 28.75em */
+@media (max-width: 28.75em) {
+  html {
+    font-size: 40%;
+  }
 }
 
 /*--NAV--*/
@@ -30,6 +61,12 @@ html {
   box-shadow: 0 2px 6px 1px #000;
 }
 
+@media screen and (max-width: 28.75rem) {
+  .nav {
+    justify-content: center;
+  }
+}
+
 .nav ul {
   display: flex;
   height: 100%;
@@ -38,6 +75,12 @@ html {
   justify-content: space-around;
   align-items: center;
   list-style: none;
+}
+
+@media screen and (max-width: 75rem) {
+  .nav ul {
+    width: 50%;
+  }
 }
 
 .link-section {
@@ -87,7 +130,8 @@ h2 {
 
 .projects-section {
   background-color: var(--sub-color);
-  padding: 10rem 2rem;
+  text-align: center;
+  padding: 5rem 2rem;
 }
 
 .projects-header {
@@ -95,6 +139,12 @@ h2 {
   margin: 0 auto 6rem auto;
   color: var(--main-color);
   border-bottom: 2px solid var(--contrast-color);
+}
+
+@media screen and (max-width: 28.75rem) {
+  .projects-header {
+    font-size: 4rem;
+  }
 }
 
 .projects-grid {
@@ -109,6 +159,16 @@ h2 {
   margin: 0 auto;
 }
 
+@media (max-width: 30.625em) {
+  .projects-section {
+    padding: 6rem 1rem;
+  }
+
+  .projects-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
 .project-tile,
 .project-title {
   width: 100%;
@@ -121,8 +181,10 @@ h2 {
   flex-direction: column;
 }
 
-.project-tile a img {
+.project-img {
+  height: calc(100% - 6.8rem);
   width: 100%;
+  object-fit: cover;
 }
 
 .project-title {
@@ -139,4 +201,112 @@ h2 {
 
 .project-tile:hover .project-title .code {
   color: var(--contrast-color);
+}
+
+.btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  margin-top: 2rem;
+  border-radius: 2px;
+  text-decoration: none;
+  color: var(--sub-color);
+}
+
+.btn-show-all {
+  font-size: 2rem;
+  background: var(--main-color);
+  transition: color 0.3s ease-out;
+}
+
+.btn-show-all:hover {
+  color: var(--contrast-color);
+}
+
+.btn-show-all:hover > i {
+  transform: translateX(3px);
+}
+
+.btn-show-all > i {
+  margin-left: 10px;
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
+}
+
+/* Contact section */
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  padding: 0 2rem;
+  background: var(--main-color);
+}
+
+.contact-section-header > h2 {
+  font-size: 6rem;
+  color: var(--sub-color);
+}
+
+@media (max-width: 28.75em) {
+  .contact-section-header > h2 {
+    font-size: 4rem;
+  }
+}
+
+.contact-section-header > p {
+  font-style: italic;
+  color: var(--sub-color);
+}
+
+.contact-links {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 980px;
+  margin-top: 4rem;
+  flex-wrap: wrap;
+}
+
+.contact-details {
+  font-size: 3.6rem;
+  text-shadow: 2px 2px 1px #1f1f1f;
+  transition: transform 0.3s ease-out;
+}
+
+.contact-details:hover {
+  transform: translateY(8px);
+}
+
+/* Footer */
+
+footer {
+  font-weight: 300;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2rem;
+  background: var(--main-gray);
+  border-top: 4px solid var(--main-red);
+}
+
+footer > p {
+  margin: 2rem;
+}
+
+.creator {
+  text-decoration: none;
+}
+
+footer i {
+  vertical-align: middle;
+}
+
+@media (max-width: 28.75em) {
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
 }
